# dynamic-protobuf

./: Cargo.toml  README.md
src/: lib.rs  macros.rs
