[package]
name = "dynamic-protobuf"
version = "0.1.1"
authors = ["LaoLittle"]
description = "Dynamically serialize protobuf message"
readme = "README.md"
keywords = [
    "protobuf",
    "dynamic-message",
]
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/LaoLittle/dynamic-protobuf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"